--- a/style.css
+++ b/style.css
@@ -95,3 +95,18 @@ ul {
     width: 100%;
     height: 100vh;
 }
+
+.intro {
+    position: absolute;
+    z-index: 0;
+}
+
+#questIndex {
+    background-color: red;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+    position: fixed;
+    display: none;
+    color: cyan;
+}
