--- a/style.css
+++ b/style.css
@@ -5,22 +5,24 @@
 
 body {
     width: 100%;
-    height: 95vh;
-    /* border: solid; */
-    /* width: 100%; */
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.intro {
+.container {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* border: solid red 2px; */
     height: 100%;
+    position: relative;
+    z-index: 0;
 }
 
-.intro h1 {
+.container h1 {
     -webkit-text-stroke: 1px var(--first);
     color: rgba(0, 0, 0, 0.05);
     font-size: 10vh;
@@ -106,7 +108,61 @@ ul {
     width: 100vw;
     height: 100vh;
     z-index: 100;
-    position: fixed;
+    position: absolute;
+    top: 0;
     display: none;
     color: cyan;
+}
+
+.quest {
+    position: relative;
+    z-index: 0;
+}
+
+#narration {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.1);
+    color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 90;
+    display: none;
+}
+
+.glow {
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-animation: glowing 1s ease-in-out infinite alternate;
+    -moz-animation: glowing 1s ease-in-out infinite alternate;
+    animation: glowing 1s ease-in-out infinite alternate;
+}
+
+@keyframes glowing {
+    from {
+        box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f0f, 0 0 40px #0ff, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+        box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+}
+
+.stopGlow {
+    background-color: #fff;
+    animation: none;
+    -webkit-animation: none;
+    -moz-animation: none;
+}
+
+#riddle {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: var(--first);
+}
+
+#button3 {
+    display: none;
 }
