--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ ul {
 #narration {
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 0, 0, 0.1);
+    background-color: rgba(255, 0, 0, 0.7);
     color: black;
     position: absolute;
     top: 0;
@@ -164,5 +164,9 @@ ul {
 }
 
 #button3 {
+    display: none;
+}
+
+#riddleButton {
     display: none;
 }
