--- a/style.css
+++ b/style.css
@@ -1,15 +1,67 @@
 :root {
-    --first: rgb(0, 0, 255);
+    --first: #202845;
     --second: rgb(255, 136, 0);
+    --regular: 5vw;
+    --third: #0C82AB;
+    --fourth: #DE4E26;
 }
 
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--third);
+    /* border: solid 5px crimson; */
+    filter: drop-shadow(0 0 0.75rem crimson);
+}
+
+.bord {
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    border: solid 10px var(--fourth);
+    display: none;
+}
+
+button {
+    width: 50%;
+    height: 8%;
+    margin-left: 25%;
+    /* margin-bottom: 3%; */
+    display: inline-block;
+    padding: 3px 1em;
+    color: white;
+    font-size: var(--regular);
+    text-decoration: none;
+    /* margin-bottom: 4px; */
+    background-color: rgba(0, 0, 0, .2);
+    border-radius: 40px;
+}
+
+button {
+    background-color: rgba(255, 76, 5, 0.728);
+    border: none;
+    color: rgba(245, 245, 245, 0.864);
+    padding: 5px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    border-color: rgba(245, 245, 245, 0.864);
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4px;
+}
+
+.start-btn {
+    width: 30%;
+    height: 12%;
+    margin-left: 35%;
+    /* border: solid; */
+    bottom: 20%;
 }
 
 .container {
@@ -17,9 +69,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 100%;
+    height: 60%;
     position: relative;
     z-index: 0;
+    /* border: solid; */
 }
 
 .container h1 {
@@ -29,6 +82,14 @@ body {
     /* color: ); */
 }
 
+p {
+    text-align: center;
+    /* margin-top: 10%; */
+    margin-bottom: 20%;
+    font-size: var(--regular);
+    color: white;
+}
+
 .compass {
     position: relative;
     width: 320px;
@@ -36,6 +97,7 @@ body {
     border-radius: 50%;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     margin: auto;
+    background-color: var(--fourth);
 }
 
 .compass>.arrow {
@@ -122,7 +184,7 @@ ul {
 #narration {
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 0, 0, 0.7);
+    background-color: var(--first);
     color: black;
     position: absolute;
     top: 0;
@@ -131,8 +193,23 @@ ul {
     display: none;
 }
 
+#narration p {
+    padding: 30px;
+    font-size: 8vw;
+}
+
+#narration button {
+    position: absolute;
+    bottom: 10%;
+}
+
 .glow {
-    background-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    bottom: 10vh;
+    /* height: 5%; */
+    color: white;
+    font-size: var(--regular);
+    background-color: rgba(81, 86, 158, 0);
     -webkit-animation: glowing 1s ease-in-out infinite alternate;
     -moz-animation: glowing 1s ease-in-out infinite alternate;
     animation: glowing 1s ease-in-out infinite alternate;
@@ -140,15 +217,15 @@ ul {
 
 @keyframes glowing {
     from {
-        box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f0f, 0 0 40px #0ff, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+        box-shadow: 0 0 10px #fff, 0 0 2px #fff, 0 0 3px rgb(0, 0, 0), 0 0 20px rgb(2, 78, 171), 0 0 5px #ff3c00, 0 0 6px #e68200, 0 0 7px #2e2e2e;
     }
     to {
-        box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        box-shadow: 0 0 10px #fff, 0 0 10px #ff3c00, 0 10 15px #ff290c, 0 10 10px #c17a10, 0 0 10px #d68202, 0 0 10px #e6be83, 0 0 10px #bfac8f;
     }
 }
 
 .stopGlow {
-    background-color: #fff;
+    /* background-color: #fff; */
     animation: none;
     -webkit-animation: none;
     -moz-animation: none;
@@ -161,6 +238,17 @@ ul {
     position: absolute;
     top: 0;
     background-color: var(--first);
+}
+
+#textRiddle {
+    font-size: 12vw;
+}
+
+input {
+    width: 80%;
+    height: 4%;
+    font-size: 15pt;
+    margin-left: 10%;
 }
 
 #button3 {
