--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     --regular: 5vw;
     --third: #0C82AB;
     --fourth: #DE4E26;
+    --void: #000000;
+    --midnight: #202845;
+    --vitriol: #0C82AB;
+    --sand: #BB815F;
+    --lava: #DE4E26;
 }
 
 body {
@@ -166,7 +171,7 @@ ul {
 }
 
 #questIndex {
-    background-color: red;
+    background-color: var(--midnight);
     width: 100vw;
     height: 100vh;
     z-index: 100;
@@ -184,7 +189,7 @@ ul {
 #narration {
     width: 100%;
     height: 100%;
-    background-color: var(--first);
+    background-color: var(--vitriol);
     color: black;
     position: absolute;
     top: 0;
@@ -249,6 +254,15 @@ input {
     height: 4%;
     font-size: 15pt;
     margin-left: 10%;
+}
+
+input[type=text] {
+    border: 1.5px solid var(--lava);
+    border-radius: 4px;
+    background-color: var(--void);
+    color: var(--lava);
+    padding: 5px 10px;
+    font-size: 16px;
 }
 
 #button3 {
