--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     --lava: #DE4E26;
 }
 
+@font-face {
+    font-family: 'title';
+    src: url(assets/Pilowlava-Regular.woff);
+}
+
 body {
     width: 100%;
     height: 100vh;
@@ -59,6 +64,7 @@ button {
     border-width: 1px;
     border-style: solid;
     border-radius: 4px;
+    margin-top: 10px;
 }
 
 .start-btn {
@@ -84,6 +90,7 @@ button {
     -webkit-text-stroke: 1px var(--first);
     color: rgba(0, 0, 0, 0.05);
     font-size: 10vh;
+    font-family: 'title';
     /* color: ); */
 }
 
