--- a/new/style.css
+++ b/new/style.css
@@ -48,6 +48,7 @@ body {
     border-radius: 50%;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     margin: auto;
+    display: none;
 }
 
 .compass>.arrow {
@@ -66,14 +67,23 @@ body {
 .compass>.compass-circle,
 .compass>.my-point {
     position: absolute;
-    width: 80%;
-    height: 80%;
+    width: 90%;
+    height: 90%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: transform 0.1s ease-out;
     background: url(../assets/compas.png) center no-repeat;
     background-size: contain;
+}
+
+.compass>.my-point {
+    opacity: 0;
+    width: 20%;
+    height: 20%;
+    background: rgb(8, 223, 69);
+    border-radius: 50%;
+    transition: opacity 0.5s ease-out;
 }
 
 .start-btn {
@@ -299,7 +309,7 @@ button {
     text-align: center;
     height: 100%;
     font-size: 2em;
-    /* display: flex; */
+    display: flex;
     z-index: 0;
     object-fit: contain;
 }
