--- a/new/style.css
+++ b/new/style.css
@@ -539,3 +539,28 @@ canvas {
         box-shadow: 0 0 10px #fff, 0 0 10px #ff3c00, 0 10 15px #ff290c, 0 10 10px #c17a10, 0 0 10px #d68202, 0 0 10px #e6be83, 0 0 10px #bfac8f;
     }
 }
+
+#gyro1,
+#gyro2 {
+    width: 100%;
+    height: 100%;
+}
+
+#gyro1 {
+    background-color: seagreen;
+    position: relative;
+    z-index: 300;
+}
+
+#gyro2 {
+    background-color: red;
+    position: relative;
+    z-index: 301;
+}
+
+#fakeGyro {
+    width: 50%;
+    height: 20%;
+    margin-left: 25%;
+    margin-top: 40%;
+}
