--- a/new/style.css
+++ b/new/style.css
@@ -212,11 +212,13 @@ ul {
 }
 
 #connection {
-    position: absolute;
+    /* position: absolute; */
+    margin-left: 30%;
+    margin-top: 40%;
     z-index: 5;
-    width: 20%;
-    height: 5%;
-    font-size: 14px;
+    width: 40%;
+    height: 20%;
+    font-size: 20px;
 }
 
 
