--- a/new/style.css
+++ b/new/style.css
@@ -394,10 +394,10 @@ button {
     /* border-style: solid;
     /* border-radius: 4px; */
     display: none;
-    width: 94%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     /* z-index: 20; */
-    position: fixed;
+    position: absolute;
     /* filter: drop-shadow(0 0 0.25rem var(--midnight)); */
     z-index: 50;
 }
@@ -549,36 +549,37 @@ button {
 #gyro2,
 #gyro3,
 #gyro4,
-#gyro5 {
+#gyro0,
+#gyroBase {
     width: 100%;
     height: 100%;
 }
 
-#gyro1 {
+#gyro0 {
     background-color: seagreen;
     position: relative;
     z-index: 305;
 }
 
-#gyro2 {
+#gyro1 {
     background-color: red;
     position: relative;
     z-index: 304;
 }
 
-#gyro3 {
+#gyro2 {
     background-color: blue;
     position: relative;
     z-index: 303;
 }
 
-#gyro4 {
+#gyro3 {
     background-color: yellow;
     position: relative;
     z-index: 302;
 }
 
-#gyro5 {
+#gyro4 {
     background-color: black;
     position: relative;
     z-index: 300;
