--- a/new/style.css
+++ b/new/style.css
@@ -589,7 +589,7 @@ button {
     width: 50%;
     height: 20%;
     margin-left: 25%;
-    margin-top: 40%;
+    /* margin-top: 40%; */
 }
 
 .menuButt {
