--- a/new/style.css
+++ b/new/style.css
@@ -549,8 +549,7 @@ button {
 #gyro2,
 #gyro3,
 #gyro4,
-#gyro0,
-#gyroBase {
+#gyro0 {
     width: 100%;
     height: 100%;
 }
@@ -589,7 +588,7 @@ button {
     width: 50%;
     height: 20%;
     margin-left: 25%;
-    /* margin-top: 40%; */
+    margin-top: 40%;
 }
 
 .menuButt {
