--- a/new/style.css
+++ b/new/style.css
@@ -606,3 +606,19 @@ canvas {
     position: absolute;
     z-index: 100;
 }
+
+#b1 {
+    background-color: black;
+}
+
+#b2 {
+    background-color: black;
+}
+
+#b3 {
+    background-color: black;
+}
+
+#b4 {
+    background-color: black;
+}
