--- a/new/style.css
+++ b/new/style.css
@@ -616,7 +616,7 @@ canvas {
     width: 5%;
     height: 40%;
     position: absolute;
-    left: 10%;
+    left: 20%;
     bottom: 30%
 }
 
@@ -634,6 +634,6 @@ canvas {
     width: 15%;
     height: 30%;
     position: absolute;
-    right: 5%;
-    bottom: 5%
+    right: 10%;
+    top: 5%
 }
