--- a/new/style.css
+++ b/new/style.css
@@ -466,10 +466,12 @@ button {
 .popup {
     border: solid black 2px;
     border-radius: 15px;
-    position: fixed;
-    margin: 2% 5%;
-    width: 90%;
-    height: 96%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    /* margin: 2% 5%; */
+    width: 100%;
+    height: 100%;
     background-color: rgba(8, 8, 8, 0.795);
     color: #0f0;
     z-index: 200;
