--- a/new/style.css
+++ b/new/style.css
@@ -192,7 +192,6 @@ ul {
 .glow {
     background-color: rgba(0, 0, 0, 0);
     -webkit-animation: glowing 0.5s ease-in-out infinite alternate;
-    -moz-animation: glowing 0.5s ease-in-out infinite alternate;
     animation: glowing 0.5s infinite alternate;
 }
 
@@ -687,7 +686,10 @@ ol {
     background-color: var(--lava);
 }
 
-#recordButton:disabled {}
+#recordButton:disabled {
+    background-color: rgb(219, 223, 219);
+    background: none;
+}
 
 #stopButton:disabled {
     background: none;
