--- a/new/style.css
+++ b/new/style.css
@@ -694,3 +694,18 @@ ol {
 #stopButton:disabled {
     background: none;
 }
+
+.rec {
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-animation: recording 0.5s ease-in-out infinite alternate;
+    animation: recording 0.5s infinite alternate;
+}
+
+@keyframes recording {
+    from {
+        border-color: 0 0 10px #fff, 0 0 2px #fff, 0 0 3px rgb(0, 0, 0), 0 0 20px rgb(2, 78, 171), 0 0 5px #ff3c00, 0 0 6px #e68200, 0 0 7px #2e2e2e;
+    }
+    to {
+        border-color: 0 0 10px #fff, 0 0 10px #ff3c00, 0 10 15px #ff290c, 0 10 10px #c17a10, 0 0 10px #d68202, 0 0 10px #e6be83, 0 0 10px #bfac8f;
+    }
+}
