--- a/new/style.css
+++ b/new/style.css
@@ -15,7 +15,17 @@ body {
     padding: 0;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--lava);
+}
+
+#back {
+    filter: grayscale(70%);
+    background: url(./assets/bck.jpg) center;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .container {
@@ -674,6 +684,10 @@ ol {
 #iconCompass {
     width: 65%;
     transform: rotate(15deg);
+}
+
+#iconObj {
+    transform: rotate(45deg);
 }
 
 :disabled {
