--- a/new/style.css
+++ b/new/style.css
@@ -240,13 +240,13 @@ ul {
 }
 
 #connection {
-    /* position: absolute; */
-    margin-left: 30%;
-    margin-top: 40%;
+    position: absolute;
     z-index: 5;
-    width: 40%;
-    height: 20%;
-    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    font-size: 28px;
 }
 
 
@@ -296,7 +296,7 @@ input[type=text] {
 
 button {
     background-color: rgb(219, 223, 219);
-    color: rgba(132, 138, 132, 0.864);
+    color: var(--void);
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
@@ -418,7 +418,7 @@ button {
 .objective,
 .input {
     /* background-color: rgb(219, 223, 219); */
-    background-color: rgba(61, 59, 182, 0.644);
+    background-color: rgba(8, 8, 8, 0.795);
     border-radius: 10px;
     /* border-width: 1.5px; */
     /* border-style: solid;
@@ -430,6 +430,8 @@ button {
     position: absolute;
     /* filter: drop-shadow(0 0 0.25rem var(--midnight)); */
     z-index: 50;
+    color: var(--lava);
+    padding: 20px;
 }
 
 .objective {
@@ -500,7 +502,7 @@ button {
     width: 100%;
     height: 100%;
     background-color: rgba(8, 8, 8, 0.795);
-    color: #0f0;
+    color: var(--lava);
     z-index: 200;
     display: none;
     overflow-y: scroll;
@@ -512,7 +514,7 @@ button {
 
 #popupText {
     padding: 20px;
-    font-size: 14px;
+    font-size: 28px;
 }
 
 #adelante,
@@ -573,7 +575,7 @@ button {
         box-shadow: 0 0 10px #fff, 0 0 2px #fff, 0 0 3px rgb(0, 0, 0), 0 0 20px rgb(2, 78, 171), 0 0 5px #ff3c00, 0 0 6px #e68200, 0 0 7px #2e2e2e;
     }
     to {
-        box-shadow: 0 0 10px #fff, 0 0 10px #ff3c00, 0 10 15px #ff290c, 0 10 10px #c17a10, 0 0 10px #d68202, 0 0 10px #e6be83, 0 0 10px #bfac8f;
+        box-shadow: 0 0 4px #fff, 0 0 4px #ff3c00, 0 10 15px #ff290c, 0 10 4px #c17a10, 0 0 4px #d68202, 0 0 4px #e6be83, 0 0 4px #bfac8f;
     }
 }
 
