--- a/new/style.css
+++ b/new/style.css
@@ -2,7 +2,7 @@
     --void: #000000;
     --midnight: #202845;
     --vitriol: #0C82AB;
-    --sand: #BB815F;
+    --sand: #aa9487;
     --lava: #DE4E26;
     margin: 0;
     padding: 0;
