--- a/new/style.css
+++ b/new/style.css
@@ -76,11 +76,13 @@ body {
 }
 
 .compass {
+    background-color: #b48569;
+    ;
     position: relative;
     width: 320px;
     height: 320px;
     border-radius: 50%;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.336);
     margin: auto;
     display: none;
     z-index: 0;
@@ -95,7 +97,7 @@ body {
     transform: translateX(-50%);
     border-style: solid;
     border-width: 30px 20px 0 20px;
-    border-color: red transparent transparent transparent;
+    border-color: var(--lava) transparent transparent transparent;
     z-index: 1;
 }
 
@@ -116,7 +118,7 @@ body {
     opacity: 0;
     width: 20%;
     height: 20%;
-    background: rgb(8, 223, 69);
+    /* background: rgb(8, 223, 69); */
     border-radius: 50%;
     transition: opacity 0.5s ease-out;
 }
