--- a/new/style.css
+++ b/new/style.css
@@ -431,8 +431,7 @@ button {
     position: absolute;
     /* filter: drop-shadow(0 0 0.25rem var(--midnight)); */
     z-index: 50;
-    color: var(--lava);
-    padding: 20px;
+    overflow-y: scroll;
 }
 
 .objective {
@@ -440,7 +439,7 @@ button {
 }
 
 .input button {
-    height: 5%;
+    height: 10%;
     font-size: 10%;
     width: 75%;
 }
@@ -725,4 +724,11 @@ ol {
     to {
         box-shadow: 0 0 10px #fff, 0 0 2px #fff, 0 0 3px rgb(156, 133, 133), 0 0 20px rgb(144, 114, 145), 0 0 5px #69615f, 0 0 6px #ffffff, 0 0 7px #8a5c5c;
     }
+}
+
+#text,
+#textRiddle {
+    color: var(--lava);
+    padding: 20px;
+    font-size: 28px;
 }
