--- a/style.css
+++ b/style.css
@@ -440,8 +440,9 @@ button {
 
 .input button {
     height: 10%;
-    font-size: 10%;
+    font-size: 20px;
     width: 75%;
+    margin-bottom: 20px;
 }
 
 .archive button {
